# crawly

./: .env.example  .gitignore  LICENSE  README.md
backend/: .env.example  Cargo.toml  README.md
backend/migrations/: 20251022070400_0001_initial_schema.sql  20251024073603_fix_slow_scan_query_index.sql  20251031085754_fix_new_node_priority.sql
backend/src/: main.rs
backend/src/common/: common.rs
backend/src/database/: db.rs
backend/src/p2p/: p2p.rs
bcharts/: Cargo.toml
bcharts/src/: main.rs
bnetwork/: Cargo.toml
bnetwork/src/: main.rs
bnetwork/src/common/: common.rs
bnetwork/src/database/: db.rs
bnetwork/src/p2p/: Notas.txt  p2p.rs
mobile/: .gitignore  App.js  README.md  app.json  generate_icon.py  make_transparent.ps1  metro.config.js  package-lock.json  package.json  process_icon.ps1
mobile/android/: settings.gradle
mobile/android/app/: build.gradle  proguard-rules.pro
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/crawly/app/: MainActivity.kt  MainApplication.kt
mobile/android/app/src/main/res/raw/: keep.xml
mobile/android/app/src/main/res/values/: strings.xml
mobile/src/screens/: CheckNodeScreen.js  DashboardScreen.js  NodeDetailScreen.js  NodeListScreen.js
mobile/src/services/: api.js
