[package]
name = "bnetwork"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.100"
bitcoin = "0.32"
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2.9"
dns-lookup = "3.0.1"
flate2 = "1.1.5"
hex = "0.4"
home = "0.5.12"
maxminddb = "0.26"
rand = "0.9.2" # Bajamos a 0.8 que es más estándar
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
tokio = { version = "1.48.0", features = ["full"] }
tor-stream = "0.3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

arc-swap = "1.6"
tar = "0.4"

axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }

tokio-socks = "0.5.1" 

sha3 = "0.10"

tokio-cron-scheduler = "0.15.0"

futures = "0.3"