[package]
name = "bnetwork"
version = "0.1.0"

edition = "2018"

[dependencies.rusqlite]
version = "0.32.1"
features = ["bundled"]

[dependencies.reqwest]
version = "0.12.12"
features = ["blocking", "json"]

[dependencies]
dns-lookup = "2.0.4"
chrono = "0.4.19"
bitcoin = "0.32.5"
rand = "0.8.3"
home = "0.5.3"
serde_json = "1.0.64"
data-encoding = "2.3.2"
hex = "0.4.3"
tor-stream = "0.3.0"